samples/_failures_safe/1761158747_1ffefe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1cba3983.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_1cba3983.c:163:23: error: expected declaration or statement at end of input
  163 | void graph_bfs(struct Graph *g, int start_id) {
      |                       ^~~~~
